[tool.poetry]
name = "git-settings-bot"
version = "0.1.0"
description = ""
authors = ["Vladislav Romaschenko <vlad1vaselkov@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
PyGithub = "^2.1.1"
fastapi = {extras = ["uvicorn"], version = "^0.104.1"}
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
PyYAML = "^6.0.1"
uvicorn = "^0.24.0.post1"
apscheduler = "^3.10.4"
rq = "^1.15.1"
rq-scheduler = "^0.13.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
skip = [
    ".tmp",
    ".venv",
]
include_trailing_comma = true
